# internal/service/question/question_responses.go
@@ -1,0 +1,24 @@
+package question
+
+import "time"
+
+type CreateQuestionResponse struct {
+	ID uint
+}
+
+type ListQuestionsResponse struct {
+	ID           uint
+	Title        *string
+	QuestionText string
+	AnswerText   string
+}
+
+type GetQuestionResponse struct {
+	ID           uint
+	Title        *string
+	QuestionText string
+	AnswerText   string
+	CreatedAt    time.Time
+	UpdatedAt    time.Time
+	DeletedAt    time.Time
+}
